# simple-stack-fastapi-edgedb

./: LICENSE  README.md  docker-compose.yml
backend/: .env  .flake8  .gitignore  Dockerfile  database.esdl  mypy.ini  pyproject.toml  requirements.txt
backend/app/: auth.py  config.py  db.py  email.py  initial_data.py  main.py  schemas.py  security.py  utils.py
backend/app/api/: __init__.py  items.py  login.py  users.py  utils.py
backend/app/crud/: item.py  user.py
backend/dbschema/: database.esdl
backend/scripts/: format.sh  lint.sh  migrate.sh
frontend/: .env
frontend/src/: api.ts
frontend/src/interfaces/: index.ts
frontend/src/store/admin/: actions.ts  getters.ts
frontend/src/views/main/admin/: EditUser.vue
