[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Admin <admin@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
uvicorn = "^0.11.5"
fastapi = "^0.54.1"
python-multipart = "^0.0.5"
email-validator = "^1.1.0"
passlib = {extras = ["bcrypt"], version = "^1.7.2"}
emails = "^0.5.15"
gunicorn = "^20.0.4"
jinja2 = "^2.11.2"
python-jose = {extras = ["cryptography"], version = "^3.1.0"}
python-dotenv = "^0.13.0"
edgedb = "^0.7.1"

[tool.poetry.dev-dependencies]
mypy = "^0.770"
black = "^19.10b0"
isort = "^4.3.21"
autoflake = "^1.3.1"
flake8 = "^3.7.9"
pytest = "^5.4.1"
pytest-cov = "^2.8.1"

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
line_length = 88

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
