[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Admin <admin@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
uvicorn = "^0.12.1"
fastapi = "^0.61.1"
python-multipart = "^0.0.5"
email-validator = "^1.1.1"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
emails = "^0.6"
jinja2 = "^2.11.2"
python-jose = {extras = ["cryptography"], version = "^3.2.0"}
python-dotenv = "^0.14.0"
edgedb = "^0.11.0"

[tool.poetry.dev-dependencies]
mypy = "^0.790"
black = "^20.8b1"
isort = "^5.6.4"
autoflake = "^1.4"
flake8 = "^3.8.4"
pytest = "^6.1.1"
pytest-cov = "^2.10.1"

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
line_length = 88

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
